# OpenHachimi

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TESTING.md  USER_GUIDE.md  deploy.py  deploy.sh  install.sh  main.py  pyproject.toml  pytest.ini  tech_comparison_report.md
.claude/: settings.local.json
.github/workflows/: pytest.yml
docs/: hermes-refactor-report.md
openhachimi_agent/: __init__.py  __main__.py  agent.py  api_models.py  app_logging.py  cli.py  config.py  daemon.py  memory.py  prompts.py  server.py  service.py  tool_utils.py  tools.py
openhachimi_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openhachimi_agent/agent/: __init__.py  execution.py  factory.py  intent.py  subagents.py  verification_evidence.py  verification_stop.py
openhachimi_agent/content/: prompt_registry.py  prompts.py  role_filters.py  roles.py  runtime_context.py  skills.py
openhachimi_agent/context/: __init__.py  compressor.py  context_view.py  engine.py  pruning.py  summary.py  token_estimate.py
openhachimi_agent/core/: config.py  deps.py  identifiers.py  install.py  redaction.py  updater.py  version.py
openhachimi_agent/daemon/: __init__.py  deploy.py
openhachimi_agent/interface/: cli.py  http.py  presenter.py  telegram.py
openhachimi_agent/memory/: __init__.py  bm25.py  capture.py  conflicts.py  consolidation.py  embeddings.py  extraction.py  formatting.py  llm.py  migration.py  models.py  privacy.py  prompts.py  recall.py  scheduler.py  store.py  vector_index.py
openhachimi_agent/scheduler/: __init__.py  delivery.py  models.py  runner.py  scheduler.py  security.py  service.py  store.py  time_utils.py
openhachimi_agent/service/: __init__.py  agent_service.py  browser.py  process.py
openhachimi_agent/storage/: attachments.py  memory.py  session_meta.py  session_store.py
openhachimi_agent/system_prompts/: __init__.py  base.md  browser.md  commands.md  skills.md
openhachimi_agent/tools/: __init__.py  artifacts.py  attachments.py  browser.py  clarification.py  command.py  delegation.py  editing.py  filesystem.py  git.py  mcp.py  memory.py  middleware.py  planning.py  registry.py  research.py  scheduler.py  skills.py  toolset_groups.py  url_security.py  utils.py  vision_guard.py  web.py
openhachimi_agent/transport/: api_models.py
openhachimi_agent/vision/: __init__.py  capabilities.py  preprocess.py  (+1 more)
roles/: default.md
scripts/: deploy.bat  deploy.sh
tests/: conftest.py
user/: config.example.yaml  mcp-servers.example.json
webui/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+187 files in other folders)
