[project]
name = "openhachimi-agent"
version = "0.1.0"
description = "一个基于 PydanticAI 构建的自定义 Agent 项目。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-ai-slim[openai]>=1.0.10",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
hachimi = "openhachimi_agent.__main__:main"
Hachimi = "openhachimi_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["openhachimi_agent*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
