[project]
name = "openhachimi-agent"
version = "0.1.0"
description = "一个基于 PydanticAI 构建的自定义 Agent 项目。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-ai-slim[openai]>=1.107.0,<2.0.0",
    "PyYAML>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.42.0",
    "playwright-stealth>=2.0.0",
    "python-telegram-bot[socks]>=21.0",
    "ddgs>=9.14.0",
    "sqlite-vec>=0.1.6",
    "croniter>=3.0.0",
    "mcp>=1.1.2",
    "qrcode>=7.0.0",
    "cryptography>=42.0.0",
    # tiktoken 用于上下文压缩预检的精确 token 计数(按真实分词器替代字符比例估算,
    # 避免 preflight 阈值偏差导致过早/过晚触发压缩);encoding 按模型自适应。
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
hachimi = "openhachimi_agent.__main__:main"
Hachimi = "openhachimi_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["openhachimi_agent*"]

[tool.setuptools.package-data]
openhachimi_agent = [
    "system_prompts/*.md",
    "system_prompts/**/*.md",
    "webui_dist/**/*",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
